# dnd_creator

./: .env.example  .gitignore  API_TESTING_GUIDE.md  ARCHITECTURE.json  Analysis of backend4 Directory.md  BACKEND_ANALYSIS_COMPLETE.md  BACKEND_CLEANUP_ANALYSIS.md  BACKEND_CLEANUP_COMPLETE.md  BACKEND_CONSOLIDATION_COMPLETE.md  CODE_CHANGES_SUMMARY.md  COMPLETION_TASKS.md  CURRENT_STATUS_AND_NEXT_STEPS.md  Collecting workspace informationBased.md  DOC_INDEX.md  EQUIPMENT_ENHANCEMENT_COMPLETE.md  FRONTEND_TESTING_GUIDE.md  FRONTEND_TESTING_GUIDE_.md  FRONTEND_V2_REFACTORING_COMPLETE.md  GENERATORS_UPDATE_COMPLETE.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_PHASES.md  PHASE_2_FACTORY_ENDPOINTS_COMPLETE.md  PHASE_3_MIGRATION_COMPLETE.md  PHASE_4_REMOVAL_ANALYSIS.md  README.md  REFACTORING_COMPLETE.md  RQMTS.json  SERVICE_GAPS.md  TASK_2B_CHARACTER_SHEET_INTEGRATION_COMPLETE.md  TASK_2C_VALIDATION_COMPLETE.md  TASK_3B_COMPLETE.md  TASK_3B_ITEM_ENDPOINTS_COMPLETE.md  TASK_4A_THEME_PARAMETER_COMPLETE.md  TECHNICAL_ISSUES_LOG.md  TEST_SCRIPT_REFACTORING_COMPLETE.md  TEST_STRATEGY.md  UUID_MIGRATION_COMPLETE.md  V2_API_COMPLETE.md  WARP.md  __init__.py  (+72 more)
character_service/: .env.dev  .env.example  =2.9  CONTAINER_DEPLOYMENT.md  IMPLEMENTATION_PLAN.md  README.md  app_broken.py  pyproject.toml
character_service/alembic/versions/: 2024_08_24_add_journal_system.py
character_service/config/: config.yaml
character_service/docs/: SERVICE.md
character_service/examples/: antitheticon_example.py  theme_progression.py  ww2_theme.py
character_service/src/api/: metrics_api.py
character_service/src/character_service/: __init__.py
character_service/src/core/: logging_config.py
character_service/src/models/: character_models.py  database_models.py  git_database.py
character_service/src/services/: clients.py  content_coordinator.py  creation.py  creation_factory.py  creation_validation.py  unified_catalog_migration.py  unified_catalog_service.py
character_service/tests/: conftest.py  test_character_repository.py
character_service/tests/api/: conftest.py  test_endpoints.py  test_integration.py
character_service/tests/service/: test_character_service.py  test_character_validation.py  utils.py
character_service/tests/smoke_tests/: run_smoke_tests.py  test_catalog_integration.py
character_service/tests/utils/: db_utils.py
services/api_gateway/: .gitignore  COMPLETION_TASKS.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
services/api_gateway/config/: dynamic.yml  traefik.yml
services/api_gateway/docs/: operational_guide.md
services/api_gateway/tests/: conftest.py  test_auth.py  test_discovery.py  test_rate_limit.py
services/auth/: COMPLETION_TASKS.md  ICD_auth_service.md  docker-compose.yml  pixi.toml  pyproject.toml
services/auth/deployment/: docker-compose.yml
services/auth/docs/: SRD_auth_service.md  UPDATE_PLAN.md
services/auth/scripts/: README.md  cleanup_sqlalchemy.sh  migrate_to_storage.py
services/campaign/: COMPLETION_TASKS.md  ICD.md  ICD_campaign_service.md  README.md  WARP.md  alembic.ini  docker-compose.yml  init.sql  migrations.sql  prometheus.yml  pyproject.toml  srd.md
services/campaign/alembic/: env.py  script.py.mako
services/campaign/campaign-service/: Dockerfile  pixi.toml
services/campaign/deployment/: docker-compose.yml
services/campaign/docs/: COMPLETION_TASKS.md  MIGRATION_PLAN.md  SERVICE_TESTS.md  SRD_campaign_service.md  STORAGE_INTEGRATION.md  UPDATE_PLAN.md  antitheticon.md  antitheticon_implementation.md
services/campaign/reports/: test-results.xml
services/campaign/scripts/: docker.sh
services/campaign/src/: app.py  main.py
services/campaign/tests/: conftest.py  test_campaign.py  test_campaign_permissions.py  test_campaign_repository_advanced.py  test_campaign_soft_delete.py  test_message_hub_integration.py  test_storage_port.py  test_version_control.py  test_version_control_models.py
services/campaign/tools/: migrate_to_storage.py
services/catalog/: ICD_catalog_service.md  docker-compose.yml  pyproject.toml
services/catalog/catalog-service/: pixi.toml
services/catalog/deployment/: docker-compose.yml
services/catalog/docs/: COMPLETION_TASKS.md  SRD_catalog_service.md  UPDATE_PLAN.md
services/character/: .env.example  COMPLETION_TASKS.md  Dockerfile  Makefile  README.md  SERVICE_TESTS.md  SRD_character_service.md  alembic.ini  docker-compose.yml  openapi.yaml  pixi.toml  prometheus.yml  pyproject.toml  pytest.ini  setup.py
services/character/alembic/: env.py
services/character/config/: config.yaml  features.yaml
services/character/deployment/: docker-compose.yml
services/character/docs/: API.md  COMPLETION_TASKS.md  ICD_character_service.md  IMPLEMENTATION_GUIDE.md  INTEGRATION.md  UPDATE_PLAN.md  dnd_5e_2024_character_sheet.md  storage_integration.md  storage_migration.md  uuid_standards.md
services/character/k8s/: deployment.yaml  secrets.yaml  service.yaml
services/character/openapi/: validation.yaml
services/character/scripts/: init_schema.sql  setup_dev_db.sh
services/character/src/: app.py
services/character/tests/: conftest.py
services/game_session/: .env.example  .pre-commit-config.yaml  Dockerfile  docker-compose.yml  pyproject.toml
services/game_session/docs/: ARCHITECTURE.md  COMPLETION_TASKS.md  ICD.md  SRD.md
services/image/: COMPLETION_TASKS.md  ICD_image_service.md  README.md  SRD_image_service.md  alembic.ini  docker-compose.yml  pyproject.toml  setup.py
services/llm/: COMPLETION_TASKS.md  ICD_llm_service.md  README.md  docker-compose.yml  openapi.yaml  pyproject.toml
services/message/: COMPLETION_TASKS.md  README.md  docker-compose.yml  pixi.toml  pyproject.toml  setup.py
services/metrics/: Dockerfile  ICD_metrics_service.md  SRD_metrics_service.md  pixi.toml  pyproject.toml
services/storage/: COMPLETION_TASKS.md  ICD_storage_service.md  README.md  SRD_storage_service.md  alembic.ini  pixi.toml  pyproject.toml  setup.py
template/{{ cookiecutter.__project_slug }}/: Dockerfile  Makefile  README.md  docker-compose.yml  pixi.toml  pyproject.toml
(+1798 files in other folders)
