[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "llm-service"
version = "0.1.0"
description = "LLM Service for D&D Character Creator"
authors = ["AJ Smith"]
readme = "README.md"
packages = [{include = "llm_service", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.103.0"
uvicorn = {extras = ["standard"], version = "^0.23.0"}
pydantic = {extras = ["email"], version = "^2.3.0"}
pydantic-settings = "^2.0.3"
openai = "^1.0.0"
redis = {extras = ["hiredis"], version = "^5.0.0"}
httpx = "^0.24.1"
prometheus-client = "^0.17.0"
structlog = "^23.1.0"
pyjwt = "^2.8.0"
python-multipart = "^0.0.6"
pillow = "^10.0.0"
aio-pika = "^9.3.0"
getimg-ai = "^1.1.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-asyncio = "^0.21.1"
pytest-cov = "^4.1.0"
black = "^23.7.0"
isort = "^5.12.0"
ruff = "^0.0.286"
mypy = "^1.5.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py311']
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 100

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = false
no_implicit_optional = true
strict_optional = true
warn_redundant_casts = true
warn_unused_ignores = false
warn_no_return = true
warn_return_any = true
strict_equality = true
disallow_any_generics = false

[tool.pytest.ini_options]
testpaths = ["tests"]
python_classes = "Test*"
python_functions = "test_*"
asyncio_mode = "auto"
